# combos_experiments

./: ananlyzing.ipynb  distribution_views.ipynb  generator  parameters.xml  parameters.yaml  result_for_diff_availability.csv  result_for_diff_disk_cap.csv  result_for_diff_power.csv  result_for_diff_power_files.csv  run_with_different_host_powers.py
Files/: CMakeLists.txt  Makefile  boinc.cpp  create_deployment  create_platform  deployment.xml  parameters_struct_from_yaml.hpp  platform.xml  result_llifetime_gathering.cpp  result_llifetime_gathering.hpp
Files/client_side/: data_client.cpp  execute_task.cpp  fetch_work.cpp
Files/components/: data_client_server.cpp  scheduler.cpp  shared.cpp  shared.hpp
Traces/einstein/: unsorted
Traces/lhc/: unsorted
